--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server  --hot --content-base demo/dist",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "build-demo":
-      "cross-env NODE_ENV=development webpack --progress --hide-modules",
-    "prepare": "npm run build"
+      "cross-env NODE_ENV=development webpack --progress --hide-modules"
   },
   "dependencies": {
     "lodash": "^4.17.15"
@@ -44,6 +43,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "css-selector-tokenizer": "^0.8.0",
     "eslint": "^4.13.1",
     "eslint-config-node": "^2.0.0",
     "eslint-config-standard": "^11.0.0-beta.0",
@@ -53,6 +53,8 @@
     "eslint-plugin-vue": "^4.0.0-beta.2",
     "file-loader": "^1.1.4",
     "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
+    "vue-fragment": "^1.5.2",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
